assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&family=Righteous&display=swap');
/*   font-family: 'Montserrat', sans-serif; | font-family: 'Righteous', cursive; */

/* color-ref primary-color: #0d5d56; | secondary-color:  #6d2433 | accent-color:  #6abea7 */

nav {
    padding: 1rem;
    Font-Family: 'Montserrat', sans-serif;
    Font-Size: 30px;
}

.navbar {
    background-color: #0d5d56;
}

.image-container {
    display: flex;
    align-items: center;
    justify-content: center;

    position: relative;
}

.about-container {}

.mission-container {
    background-color: #73aaa5;
    color: #0d5d56;
    font-size: 18px;
}

.location-container {}

.footer-container {}

#hero-image {
    background: url(../images/hero_image.jpg) no-repeat center center fixed;
    height: 75vh;
    max-width: 100%;
    background-size: cover;
    background-color: rgba(0, 0, 0, 0);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

}


.nav-link {
    font-size: 60%;
}

.btn-secondary {
    color: #ffffff;
    background-color: #6d2433;
    border-color: #6d2433;
    border-radius: 20px;
    font-family: 'Montserrat', sans-serif;
    margin-top: 20%;
    margin-left: 45%;
}

.btn-secondary:hover,
.btn-secondary:active,
.btn-secondary:active:focus {
    background-color: #963d4f;
    border-color: #6d2433;
    color: white;
}

#slogan {
    color: #6abea7;
    font-size: 4rem;
}


#subtext {
    color: #6abea7;
    font-size: 30px;
    font-family: 'Montserrat', sans-serif;
}

#subheading {
    color: #6abea7;
    font-family: 'Righteous', san-serif;
    font-size: xx-large;
}

div h3 {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    font-size: 15px;
    color: black;

}

.btn-light {
    background-color: #853d4c;
    border-color: #853d4c;
}

.text-uppercase.my-3 {
    color: #0d5d56;
}

.slogan {
    color: #6abea7;
    text-align: center;
}

.social-networks li {
    display: inline;
}

.social-networks {
    text-align: center;
    list-style-type: none;
}


.social-networks i {
    font-size: 200%;
    margin: 1%;
    padding: 5%;
    color: #6d2433;
}


#maps {
    height: 50vh;
    width: 100%;
    border: none;
}


#closing-line {
    color: #6d2433;
}

/* END OF INDEX */

/* About Us Page  */
#about-image {
    background: url('../images/crossfit-class.jpg') no-repeat center center fixed;
    height: 100vh;
    max-width: 100%;
    background-size: cover;
}

div h2 {
    color: #0d5d56;
    ;
    font-family: 'Righteous', cursive;
}

#community-slogan {
    text-align: center;
}

.jumbotron-header {
    font-family: 'Righteous', cursive;
    color: #6abea7;
    font-size: 4rem;
    font-weight: 700;
    margin-top: 80px;

    #gym-times {
        color: #6d2436;

    }

    .col-4 {
        -ms-flex: 0 0 33.333333%;
        flex: 0 0 33.333333%;
        max-width: 33.333333%;
    }

    .box {
        background-color: #6abea7 text-align: center;
        padding: 50px 0;
        color: white;
        font-size: 32px;
        line-height: 32px;
        border-radius: 6px;
        margin-bottom: 20px;
    }

    /* ----------END OF ABOUT---------------- */

    // Small devices (landscape phones, 576px and up)
    @media (min-width: 576px) {
        ...
    }

    // Medium devices (tablets, 768px and up)
    @media (min-width: 768px) {
        ...
    }

    // Large devices (desktops, 992px and up)
    @media (min-width: 992px) {
        ...
    }

    // Extra large devices (large desktops, 1200px and up)
    @media (min-width: 1200px) {
        ...
    }

